# Fejvm

./: Cargo.toml  justfile
.github/workflows/: build.yml
src/: buffer.rs  c_pool.rs  class.rs  class_file.rs  class_file_field.rs  class_file_method.rs  class_file_version.rs  class_reader.rs  class_reader_error.rs  field_flags.rs  lib.rs  method_flags.rs
tests/: c_class_test.rs  class_test.rs  p_class_test.rs
tests/resources/: compile.sh
tests/resources/Fejvm/: Constants.java  hi.java
tests/utils/: mod.rs
