[package]
name = "Fejvm"
version = "0.1.0"
authors = ["Soumyadip Moni <avater.clasher@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.3"
cesu8 = "1.1.0"
strum = "0.26.1"
strum_macros = "0.26.1"
thiserror = "1.0.56"
